--- a/style.css
+++ b/style.css
@@ -1,669 +1,461 @@
+
 *{
-	margin: 0;
-	padding: 0;
+  margin:0;
+  padding: 0;
 }
-
 body{
-	font-family: sans-serif;
+  width:1000px;
+  font-family: Georgia;
+  transition:all .5s ease; 
+  -webkit-transition:all .5s ease;
+  -moz-transition:all .5s ease;
+  
+}
+h1,h2,h3,h4,h5,h6{
+  font-weight: normal;
+
 }
 
-a{
+.clear{
+  overflow:hidden;
+
+}
+#header {
+	width: 100%;
+	height: 65px;
+	background: linear-gradient(to right,#000cffcc,white);
+}
+#footer {
+  width: 100%;
+  height: 65px;
+  background: linear-gradient(to left,#000cffcc,white);
+  font-family: georgia;
+}
+#footer p {
+	float: right;
+	color: white;
+	padding: 25px;
+	font-size: 20px;
+}
+#social-area{
+  float: left;
+  width: 40%;
+  height: 100%;
+  display: inline-block;
+  margin-left: 47px;
+}
+#social-area ul{
+  height: 100%;
+  margin: 0px 0 0 0;
+  display: flex;
+  list-style: none;
+}
+#social-area li{
+	padding: 20px 10px;
+}
+#social-area a{
+  display: block;
+	background: white;
 	text-decoration: none;
-}
-
-/* header section */
-
-#header{
-	background: linear-gradient(to left, #00fff6, #4708C0);
-	width: 100%;
-	height: 70px;
-	border-bottom: 5px solid #ff5a00;
-}
-
-#header .header_wrapper{
-	width: 960px;
-	margin: 0 auto;
-}
-
-.header_wrapper .left_side_header{
-	float: left;
-	cursor: pointer;
-}
-
-.left_side_header h2{
-	float: left;
-	font-size: 35px;
-	color: #fff;
-	margin: 15px 0px;
-	margin-right: 50px;
-	letter-spacing: 2px;
-}
-.left_side_header img{
-	float: left;
-	height: 40px;
-	margin: 15px 0px;
-}
-
-
-
-.header_wrapper .right_side_social_header{
-	float: right;
-}
-
-.right_side_social_header ul{
-	list-style-type: none;
-	display: flex;
-	margin: 15px 0px;
-}
-
-.right_side_social_header ul li{
-	margin-left: 30px;
-}
-
-.right_side_social_header ul li a{
-	color: #262626;
-}
-
-.right_side_social_header ul li a .fab{
-	display: block;
-	padding: 15px;
-	background: #fff;
-	width: 15px;
-	height: 15px;
+	width: 30px;
+	height: 30px;
 	text-align: center;
+	line-height: 24px;
 	border-radius: 50%;
-	transition: 0.5s all ease;
+	transition: .1s;
+	padding: 5px 2px 0px 2px;
 }
-
-.right_side_social_header ul li:hover a #facebook{
-	background: #3b5998;
-	color: #fff;
-	transform: rotateX(360deg);
+#social-area a:hover{
+  background: #CF20F8;
+  color: white;
 }
-.right_side_social_header ul li:hover a #youtube{
-	background: #ff0000;
-	color: #fff;
-	transform: rotateX(360deg);
-}
-.right_side_social_header ul li:hover a #twitter{
-	background: #55acee;
-	color: #fff;
-	transform: rotateX(360deg);
-}
-.right_side_social_header ul li:hover a #linkedin{
-	background: #007bb5;
-	color: #fff;
-	transform: rotateX(360deg);
-}
-.right_side_social_header ul li:hover a #behance{
-	background: #1769ff;
-	color: #fff;
-	transform: rotateX(360deg);
-}
-
-/* the profile section */
-
-#profile{
-	width: 100%;
-	background:url('img/background.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-#profile .profile_wrapper{
-	width: 960px;
-	margin: 0 auto;
-	height: 100vh;
-}
-
-.profile_wrapper .pp{
-	float: left;
-	width: 480px;
-	margin: 5% 0px;
-	text-align: center;
-}
-
-.profile_wrapper .pp img{
-	margin-top: 60px;
-	margin-left: 0px;
-	text-align: center;
-}
-
-.profile_wrapper .pp p{
-	color: #fff;
-	font-family: arial;
-	font-weight: 100;
-	font-size: 50px;
-	letter-spacing: 10px;
-	margin: 0px 60px;
-	padding: 10px;
-	border-top: 2px solid #fff;
-	text-align: center;
-}
-
-.profile_wrapper .text_pp{
-	float: right;
-	width: 480px;
-}
-
-.profile_wrapper .text_pp p{
-	display: block;
-	padding: 50% 0px;
-	font-family: sans-serif;
-	color: #fff;
-	font-size: 20px;
-	letter-spacing: 5px;
-	line-height: 150%;
-}
-
-#span_text_pp{
-	
-}
-
-/* the content section */
-
-/*the menu section */
-
-#content_main{
-	
-}
-
-#content_main .menu{
-	width: 100%;
-	height: 40px;
-	background: rgba(204, 204, 204, 0.4);
-	border-bottom: 3px solid #FF5A00;
-	border-top: 3px solid #FF5A00;
-}
-.menu .menu_wrapper{
-	width: 960px;
-	margin: 0 auto;
-}
-.menu_wrapper ul{
-	width: 770px;
-	margin: 0 auto;
-}
-
-.menu_wrapper ul li{
-	list-style: none;
-	float: left;
-	border-left: 1px solid #FFFDFD;
-	border-right: 1px solid #757575;
-}
-.menu_wrapper ul li:last-child{
-	border-right: none;
-	position: relative;
-}
-.menu_wrapper ul li:first-child{
-	border-left: none;
-}
-
-.menu_wrapper ul li a{
-	display: block;
-	padding: 10px 15px;
-	color: #262626;
-	width: 150px;
-	text-align: center;
-	transition: 0.5s all ease;
-	font-weight: bold;
-}
-
-.menu_wrapper ul li a:hover{
-	background: #262626;
-	color: #fff;
-}
-.menu_wrapper ul li ul{
-	width: 180px;
+.fa-list.icon{
 	position: absolute;
-	z-index:-100;
-	background: #ccc;
-	display: none;
-	transition: 0.3s all ease;
+	top: 20px;
+	right: 35px;
+	font-size: 30px;
+	color: #25acf5;
+	display:none;
 }
 
-.menu_wrapper ul li:hover ul{
-	display: block;
-	z-index: 100;
+#header .find_me {
+  width: 100%;
+  height: 100%;
+
 }
-
-.menu_wrapper ul li ul li{
-	float:none;
-	border-bottom: 1px solid #FFFDFD;
-	border-top: 1px solid #757575;
-	border-left: 0px;
-	border-right: 0px;
+#header .find_me .left{
+  float: left;
+  height: 100%;
+  display: inline-block;
 }
-
-.menu_wrapper ul li ul li a{
-	text-align: left;
+#header .find_me .left P {
+	height: 100%;
+	font-size: 35px;
+	color: white;
+	margin: 8px 40px 0px 61px;
 }
-
-
-
-#active{
-	background: #262626;
-	color: lime;
-}
-
-#down{
-	padding: 5px;
-}
-
-/* experience section */
-
-#content_main .experiences{
-	width: 100%;
-}
-
-/* webdesign section */
-
-.experiences .webdesign{
-	width: 100%;
-	background: #D7D6D4;
-	border-bottom: 3px solid #FF5A00;
-}
-
-.webdesign .webdesign_wrapper{
-	width: 960px;
-	margin: 0 auto;
-	overflow: hidden;
-	padding: 100px 0px;
-}
-
-.webdesign_wrapper .web_text{
-	width: 480px;
-	float: left;
-	background: #fff;
-	height: 220px;
-	padding: 20px 0px;
-}
-
-.webdesign_wrapper .web_text h2{
-	font-family: sans-serif;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	padding: 15px;
-	color: #262626;
-}
-
-.webdesign_wrapper .web_text p{
-	padding: 15px;
-	text-align: justify;
-	letter-spacing: 2px;
-	font-size: 16px;
-	color: #262626;
-}
-
-.webdesign_wrapper .web_text a{
-	float: right;
+#header .find_me .left img {
+	width: 65px;
+	height: 40px;
+	padding: 0px 0px 0px 55px;
 	display: inline-block;
-	color: #fff;
-	background: #262626;
-	padding: 15px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	border: 2px solid lime;
-	margin-top: -2px;
-	font-weight: bold;
-	transition: 0.5s all ease;
+	margin: 10px 0px 0px 10px;
+	position: absolute;
+	left: 200px;
+	top: 0;
 }
-
-.webdesign_wrapper .web_text a:hover{
-	background: lime;
-	color: #fff;
-	border: 2px solid #262626;
+#header .find_me .social{
+  float: right;
+  width: 40%;
+  height: 100%;
+  display: inline-block;
 }
-
-.webdesign_wrapper .web_img{
-	width: 480px;
-	float: right;
-}
-
-.web_img img{
-	width: 460px;
-}
-
-
-/* wordpress section */
-
-.experiences .wordpress{
-	width: 100%;
-	background: #D7D6D4;
-	border-bottom: 3px solid #FF5A00;
-}
-
-.wordpress .wordpress_wrapper{
-	width: 960px;
-	margin: 0 auto;
-	overflow: hidden;
-	padding: 100px 0px;
-}
-
-.wordpress_wrapper .wordpress_text{
-	width: 480px;
-	float: right;
-	background: #fff;
-	height: 236px;
-	padding: 20px 0px;
-}
-
-.wordpress_wrapper .wordpress_text h2{
-	font-family: sans-serif;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-size: 20px;
-	padding: 15px;
-	color: #262626;
-}
-
-.wordpress_wrapper .wordpress_text p{
-	padding: 15px;
-	text-align: justify;
-	letter-spacing: 2px;
-	font-size: 16px;
-	color: #262626;
-}
-
-.wordpress_wrapper .wordpress_text a{
-	float: left;
-	display: inline-block;
-	color: #fff;
-	background: #262626;
-	padding: 15px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	border: 2px solid lime;
-	margin-top: -2px;
-	font-weight: bold;
-	transition: 0.5s all ease;
-}
-
-.wordpress_wrapper .wordpress_text a:hover{
-	background: lime;
-	color: #fff;
-	border: 2px solid #262626;
-}
-
-.wordpress_wrapper .wordpress_img{
-	width: 480px;
-	float: left;
-	text-align: center;
-}
-
-.wordpress_img img{
-	width: 309px;
-}
-
-/* graphics section */
-
-
-.experiences .graphics{
-	width: 100%;
-	background: #D7D6D4;
-	border-bottom: 3px solid #FF5A00;
-}
-
-.graphics .graphics_wrapper{
-	width: 960px;
-	margin: 0 auto;
-	overflow: hidden;
-	padding: 100px 0px;
-}
-
-.graphics_wrapper .graphics_text{
-	width: 480px;
-	float: left;
-	background: #fff;
-	height: 220px;
-	padding: 20px 0px;
-}
-
-.graphics_wrapper .graphics_text h2{
-	font-family: sans-serif;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	padding: 15px;
-	color: #262626;
-}
-
-.graphics_wrapper .graphics_text p{
-	padding: 15px;
-	text-align: justify;
-	letter-spacing: 2px;
-	font-size: 16px;
-	color: #262626;
-}
-
-.graphics_wrapper .graphics_text a{
-	float: right;
-	display: inline-block;
-	color: #fff;
-	background: #262626;
-	padding: 15px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	border: 2px solid lime;
-	margin-top: -2px;
-	font-weight: bold;
-	transition: 0.5s all ease;
-}
-
-.graphics_wrapper .graphics_text a:hover{
-	background: lime;
-	color: #fff;
-	border: 2px solid #262626;
-}
-
-.graphics_wrapper .graphics_img{
-	width: 480px;
-	float: right;
-}
-
-.graphics_img img{
-	width: 470px;
-}
-
-
-/* youtube section */
-
-.experiences .youtube{
-	width: 100%;
-	background: #D7D6D4;
-	border-bottom: 3px solid #FF5A00;
-}
-
-.youtube .youtube_wrapper{
-	width: 960px;
-	margin: 0 auto;
-	overflow: hidden;
-	padding: 100px 0px;
-}
-
-.youtube_wrapper .youtube_text{
-	width: 480px;
-	float: right;
-	background: #fff;
-	height: 236px;
-	padding: 20px 0px;
-}
-
-.youtube_wrapper .youtube_text h2{
-	font-family: sans-serif;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-size: 20px;
-	padding: 15px;
-	color: #262626;
-}
-
-.youtube_wrapper .youtube_text p{
-	padding: 15px;
-	text-align: justify;
-	letter-spacing: 2px;
-	font-size: 16px;
-	color: #262626;
-}
-
-.youtube_wrapper .youtube_text a{
-	float: left;
-	display: inline-block;
-	color: #fff;
-	background: #262626;
-	padding: 15px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	border: 2px solid lime;
-	margin-top: -2px;
-	font-weight: bold;
-	transition: 0.5s all ease;
-}
-
-.youtube_wrapper .youtube_text a:hover{
-	background: lime;
-	color: #fff;
-	border: 2px solid #262626;
-}
-
-.youtube_wrapper .youtube_img{
-	width: 480px;
-	float: left;
-	text-align: center;
-}
-
-.youtube_img img{
-	width: 480px;
-	height: 276px;
-}
-
-/* footer section */
-
-#footer{
-	width: 100%;
-	padding: 20px 0px;
-	background: #262626;
-}
-.footer_text{
-	width: 960px;
-	margin: 0 auto;
-	text-align: center;
-	margin-bottom: 15px;
-	cursor: pointer;
-}
-.footer_text p{
-	color: #fff;
-	font-weight: bold;
-}
-
-/* footer social section */
-
-.footer_social{
-	width: 960px;
-	margin: 0 auto;
-	text-align: center;
-}
-
-.footer_social ul{
-	list-style-type: none;
+#header .find_me .social ul {
+	height: 100%;
+	margin: 0px 0 0 0;
 	display: flex;
-	margin: 15px 33.3%;
-	width: 345px;
+  list-style: none;
 }
-.footer_social ul li{
-	margin-right: 30px;
+#header .find_me .social > ul li {
+	padding: 20px 10px;
 }
-.footer_social ul li a{
-	color: #262626;
-}
-.footer_social ul li a .fab{
+#header .find_me .social > ul li a {
 	display: block;
-	padding: 15px;
-	background: #fff;
-	width: 15px;
-	height: 15px;
+	background: white;
+	text-decoration: none;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	line-height: 24px;
+	border-radius: 50%;
+	transition: .1s;
+	padding: 5px 2px 0px 2px;
+}
+#header .find_me .social > ul li a:hover{
+  background: #CF20F8;
+  color: white;
+}
+/*background: linear-gradient(to right,#CF20F8,#02CFF1);*/
+section.profile {
+	width: 100%;
+	height: 540px;
+	
+  	background-image:url("images/laptop.jpg");
+	background-size:cover;
+	background-attachment:fixed;
+	display: flex;
+}
+.image{
+	background-size:cover;
+}
+.profile .pic img {
+	margin: 55px 0 0 30px;
+	text-align: center;
+}
+ .profile .pic p{
+	color: white;
+	margin: -20px 0 0px 120px;
+	font-size: 45px;
+	font-weight: bold;
+	text-shadow: 0px 4px 8px blue;
+	font-family:"Copperplate Gothic Bold";
+}
+.profile .text p {
+	font-family: "Georgia";
+	color: white;
+	font-size: 26px;
+	margin: 170px 0 0 70px;
+    width: 390px;
+}
+.profile .text p>span{
+  font-family:"Copperplate Gothic Bold";
+}
+
+section.bg {
+  	background-image:url("images/image3.jpg");
+	background-size:cover;
+	width:100%;
+	background-attachment:fixed;
+}
+
+.bg .manu {
+	width: 100%;
+	height: 75px;
+	background: linear-gradient(to right,#5b388d,#FCECCB,#74098f);
+}
+.bg .manu ul {
+	width: 90%;
+	height: 100%;
+	list-style: none;
+	margin: 0 auto;
+}
+.bg .manu ul li {
+	float: left;
+	height: 95%;
+	width: 150px;
+	padding: 0 25px;
+	 padding-bottom: 0px;
+	  position: relative;
+
+}
+/*
+.bg .manu ul li:hover{
+	border-top: 5px solid #25B1F2;
+}
+*/
+.bg .manu ul>li::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 85%;
+	height: 5px;
+	background: #25B1F2;
+	transition: .5s;
+	transform: scaleX(0);
+	transform-origin: right;
+	z-index: -1;
+	margin-left: 17px;
+}
+.bg .manu ul li:hover:before{
+		transform:scaleX(1);
+		z-index:1;
+}
+@keyframes animate{
+	0%{border:0%;}
+	25%{border:50%;}
+	50%{}
+	75%{}
+	100%{}
+}
+.bg .manu ul li a {
+	width: 145px;
+	height: 20px;
+	display: block;
+	text-decoration: none;
+	color: white;
+	text-align: center;
+	padding: 7px 0px 7px 0px;
+	border-radius: 10px;
+	font-size: 18px;
+	background-color:rgba(0,0,0,.5);
+	font-weight: bold;
+	transition: .5s;
+	border-bottom: 5px solid #FDBF03;
+	margin-top: 16px;
+}
+.bg .manu ul li#active a {
+	background: white;
+	color: #FDBF03;
+	font-family: "Copperplate Gothic Bold";
+	transform: scale(1.1);
+	margin-top: 12px;
+}
+.bg .manu ul li#active {
+	border-top: 5px solid #25B1F2;
+	margin-left: 60px;
+	margin-right: 24px;
+	padding: 0 8px;
+	padding-right: 0;
+	width: 153px;
+}.bg .manu ul li#active:hover:before{
+	display:none;
+}
+.bg .manu ul li a:hover{
+  transform: scale(1.1);
+  background: white;
+  color: #FDBF03;
+  font-family: "Copperplate Gothic Bold";
+}
+.bg .manu ul li:nth-child(2) a:hover{
+  width: 180px;
+}
+.bg .manu ul li ul{
+  position: absolute;
+  padding: 0px;
+  margin: 0px;
+  display: none;
+  left: 0px;
+}
+.bg .manu ul li ul li {
+	height: 49px;
+	top: -16px;
+	left: 0px;
+}
+.bg .manu ul li>ul>li:hover{
+	border:none;
+
+}
+.bg .manu ul li>ul>li:hover:before{
+	display:none;
+}
+.bg .manu ul li:hover ul{
+  display: block;
+}
+.bg .manu ul li ul li a {
+	font-size: 15px;
+	width: 159px;
+	height: 30px;
+}
+/*@keyframes animate{
+	0%{top:0;}
+	50%{ top:50%;transition:1s;}
+	100%{ top:100%;transition:2s;}
+}
+*/
+.fa, .fas {
+	font-weight: 900;
+	margin-left: 8px;
+}
+.experiences{
+  width: 100%;
+}
+.experiences .web {
+	width: 100%;
+	height: 370px;
+}
+.web h2 {
+	width: 100%;
+	height: 50px;
+	background-color: rgba(158,122,0,.5);
+	border-radius: 10px;
+	text-align: center;
+	font-size: 30px;
+	font-family: georgia;
+	line-height: 50px;
+	color: white;
+	margin-top: 30px;
+}
+.web P {
+	height: 195px;
+	background-color: rgba(255,255,255,.9);
+	margin: 0 auto;
+	width: 400px;
+	font-size: 20px;
+	font-family: georgia;
+	padding: 36px;
+	border-radius: 15px;
+	margin-top: 25px;
+	float: left;
+	margin-left: 40px;
+	line-height: 25px;
+}
+
+.web img {
+	width: 400px;
+	height: 270px;
+	margin: 25px 0 0 40px;
+		position: relative;	
+}
+.web img:hover .content{
+	left: 50%
+}
+.content{
+	position: absolute;
+	top: 400px;
+	left: 0;
+
+}
+.content p{
+	height: 195px;
+	background-color: rgba(255,255,255,.9);
+	margin: 0 auto;
+	width: 400px;
+	font-size: 20px;
+	font-family: georgia;
+	padding: 36px;
+	border-radius: 15px;
+	margin-top: 25px;
+	float: left;
+	margin-left: 40px;
+	line-height: 25px;
+}
+.content h2{
+	width: 100%;
+	height: 50px;
+	background-color: rgba(158,122,0,.5);
+	border-radius: 10px;
+	text-align: center;
+	font-size: 30px;
+	font-family: georgia;
+	line-height: 50px;
+	color: white;
+	margin-top: 30px;
+}
+.wordpress{
+  width: 100%;
+  height: 370px;
+}
+.wordpress img{
+  float: left;
+  margin-right:0px;
+background-color: rgba(0,215,255,1);
+}
+.wordpress p{
+  float: right;
+  margin-right: 45px;
+  margin-left: 0;
+  text-align: justify;
+}
+.web button {
+	background: #04CDF1;
+	color: white;
+	width: 84px;
+	height: 32px;
+	border: none;
+	border-radius: 10px;
+	font-size: 14px;
+	font-weight: normal;
+	font-family: georgia;
+	margin: 10px 0 0px 150px;
+}
+.web button:hover {
+	background: #FCFCFC;
+	color: #0abaff;
+	font-weight: bold;
+	border: 1px solid #0abaff;
+}
+.graphics p{
+  text-align: justify;
+}
+.youtube{
+  margin-bottom: 30px;
+}
+.experiences .Wordpress{
+}
+
+.graphics{
+}
+
+.youtube p {
+  float: right;
+  margin-right: 45px;
+  margin-left: 0;
+  text-align: justify;
+}
+.youtube img{
+float: left;
+margin-right:0px;
+		
+}
+#ScrollUp img{
+	width: 35px;
+	height: 35px;
+	line-height: 35px;
+	margin-top: 1px;
+	color: white;
+}
+#ScrollUp{
+	position: absolute;
+	position: fixed;
+	right: 5px;
 	text-align: center;
 	border-radius: 50%;
-	transition: 0.5s all ease;
+	bottom: 40px;
+	width: 40px;
+	height:40px;
+	background: linear-gradient(35deg,#FCD005,#F18049);
 }
-
-.footer_social ul li:hover a #facebook{
-	background: #3b5998;
-	color: #fff;
-	transform: rotateX(360deg);
-}
-.footer_social ul li:hover a #youtube{
-	background: #ff0000;
-	color: #fff;
-	transform: rotateX(360deg);
-}
-.footer_social ul li:hover a #twitter{
-	background: #55acee;
-	color: #fff;
-	transform: rotateX(360deg);
-}
-.footer_social ul li:hover a #linkedin{
-	background: #007bb5;
-	color: #fff;
-	transform: rotateX(360deg);
-}
-.footer_social ul li:hover a #behance{
-	background: #1769ff;
-	color: #fff;
-	transform: rotateX(360deg);
-}
-
-#twitter_color{
-	color: #55ACEE;
-}
-
-#youtube_color{
-	color: #FF0000;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ 
 
 
